--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <li><img src="images/logo.jpg" alt="logo" class="image"></li>
           <li><p id="my-name">Benita Ekene-Okikere <br> Backend Developer</p></li>
           <a href="https://www.linkedin.com/in/benita-ekene-okikere-2181a6252/"></<li>Linkedin</li></a>
-         <a href="https://github.com/benita-ekene?tab=repositories>Github"><li>Github</li></a>
+         <a href="https://github.com/benita-ekene?tab=repositories"><li>Github</li></a>
           <li>About</li>
           <li>Contact</li>
-          <a href="https://github.com/benita-ekene?tab=repositories>Github"><li class="projects">View Projects</li></a>
+          <a href="https://github.com/benita-ekene?tab=repositories"><li class="projects">View Projects</li></a>
         </Ul>
       </a>
     </section>
