--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="#">
         <Ul class="nav-bar">
           <li><img src="images/logo.jpg" alt="logo" class="image"></li>
-          <li><p id="my-name">Benita Ekene-Okikere <br> Backend Developer</p></li>
+          <li><p id="my-name">Benita Ekene-Okikere <li>Backend Developer</li> </p></li>
           <a href="https://www.linkedin.com/in/benita-ekene-okikere-2181a6252/"></<li>Linkedin</li></a>
          <a href="https://github.com/benita-ekene?tab=repositories"><li>Github</li></a>
           <li>About</li>
