--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
           <h2>
             Hi there ! <br>
           </h2>
-         My name is Benita. I'm a Backend developer and web designer. Fuelled by a passion to designing engaging apps, I deeply desire to excel and improve my work. Below is my journey so far.
+         My name is Benita. A Backend developer fuelled by a passion for designing engaging projects. I deeply desire to excel and improve my work. Below is my journey so far.
       </div>
     </section>
 
      <!-- Skills set section-->
      <section class="skills-section">
       <div class="my-journey"> 
-        <h2>My Career So Far</h2>
-        For over a decade, I have had the pleasure to collaborate with various brands, teams and individuals to create a variety of interactive web applications and websites.
+        <h2>Career So Far</h2>
+        Over a decade, I have had the pleasure to collaborate with various brands, teams and individuals to create a variety of interactive web applications and other projects.
 
         When I am not designing or developing things, you can find me spending quality time with my family, working out, riding bike,and generally spending time family and friends. 
       </div>
