--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Career So Far</h2>
         Over a decade, I have had the pleasure to collaborate with various brands, teams and individuals to create a variety of interactive web applications and other projects.
 
-        When I am not designing or developing things, you can find me spending quality time with my family, working out, riding bike,and generally spending time family and friends. 
+        When I am not designing or developing things, you can find me spending quality time with my family, voluntaring in my local church, working out, riding bike or with friends. 
       </div>
       <div class="skills">
         <h2>Skills Set</h2>
