--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Introduction section-->
     <section class="introduction">
-      <div><img src="images/Benita.png" alt="my profession" class="image2">
+      <div><img src="images/intro.jpg" alt="my profession" class="image2">
       </div>
       
       <div class="introduction-section">
