--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     A Backend Developer.
                 </h1>
                 <p>
-                    I'm a Backend Developer, I love to Build Business Logic  and functional APIs.
-                    Creating, maintaining, testing, and debugging the entire backend of an application or system is my delight. This includes the core application logic, databases, data and application integration
+                    I'm a Backend Developer, I love to Build Business Logic  and functional APIs. Creating, maintaining, testing, and debugging the entire backend of an application or system is my delight. 
+                    <!-- This includes the core application logic, databases, data and application integration -->
                 
                 </p>
                 <div class="btn-con">
@@ -48,9 +48,9 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                      After graduating in 2009 with a Bachelor’s Degree (Second Upper Class Honours) in Computer Science, I spent the last nine years working as Network Admninstrator, thereafter  as a Cloud DevOps Engineer and Backend engineer for one year. I acquired project and time management skills, as well as the ability to communicate with team members and clients while effectively meeting milestones and deadlines.<br>
+                    I have been a Learner as Backend engineer at Stutern for one year. I acquired project and time management skills, as well as the ability to communicate with team members while effectively meeting milestones and deadlines.<br>
 
-                      As a Developer and Cloud DevOps Engineer, I collaborated with graphic designers, data scientist and other developers. I have worked on some projects using technologies such as NodeJS, Express, MongoDB, HTML, CSS, JS, jQuery, Responsive Layouts, AWS cloud tools (cloud formation,  EC2 instance   )
+                      As a Backend Engineer, I collaborated with graphic designers, data scientist and other developers. I have worked on some projects using technologies such as NodeJS, Express, MongoDB, HTML, CSS, JS.
                     </p>
                     <div class="btn-con">
                         <a href="https://github.com/benita-ekene?tab=repositories" class="main-btn">
@@ -68,8 +68,8 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">10+</p>
-                            <p class="small-text">Years of <br /> experience</p>
+                            <p class="large-text">One</p>
+                            <p class="small-text">Year of <br /> experience </p>
                         </div>
                     </div>
                     <!-- <div class="about-item">
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">MongDBJS</p>
+                        <p class="prog-title">MongDB</p>
                         <div class="progress-con">
                             <p class="prog-text">90%</p>
                             <div class="progress">
@@ -222,7 +222,7 @@
                         <img src="images/mealy-App.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Restaurant App</h3>
                         <div class="icons">
                             <a href="https://github.com/benita-ekene?tab=repositories" class="icon">
                                 <i class="fab fa-github"></i>
@@ -241,7 +241,7 @@
                         <img src="images/dad jokes.Writen.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Dad Jokes</h3>
                         <div class="icons">
                             <a href="https://github.com/benita-ekene/DadJokesApi" class="icon">
                                 <i class="fab fa-github"></i>
@@ -257,20 +257,20 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port3.jpg" alt="">
+                        <img src="images/netflix.webp" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Netflix clone</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://benitaliveproject1.netlify.app/" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -347,11 +347,11 @@
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                        </div>
+                         </div>
                     </div>
-                </div>
-            </div>
-        </section> -->
+                </div>-->
+            </div> 
+        </section> 
         <!-- <section class="container" id="blogs">
             <div class="blogs-content">
                 <div class="main-title">
@@ -469,7 +469,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: University of Nigeria PortHarcourt</span>
+                                    <span>: University of PortHarcourt Nigeria </span>
                                 </p>
                             </div>
                             <!-- <div class="contact-item">
@@ -494,17 +494,17 @@
                         <div class="contact-icons">
                             <div class="contact-icon">
                                 <a href="https://www.linkedin.com/in/benita-okikere-2181a6252/" target="_blank">
-                                    <i class="fab fa-facebook-f"></i>
+                                    <i class="fab fa-linkedin"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://twitter.com/estelas_com" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
                                 <a href="https://github.com/benita-ekene?tab=repositories" target="_blank">
                                     <i class="fab fa-github"></i>
-                                </a>
+                                <!-- </a>
                                 <a href="" target="_blank">
                                     <i class="fab fa-youtube"></i>
-                                </a>
+                                </a> -->
                             </div>
                         </div>
                     </div>
