--- a/index.html
+++ b/index.html
@@ -219,36 +219,18 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/mealy-App.png" alt="">
+                        <img src="images/mealy copy.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Restaurant App</h3>
                         <div class="icons">
-                            <a href="https://github.com/benita-ekene?tab=repositories" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
                             <a href="https://mealy4u.netlify.app/" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
-                            <!-- <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a> -->
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="images/dad jokes.Writen.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Dad Jokes</h3>
-                        <div class="icons">
-                            <a href="https://github.com/benita-ekene/DadJokesApi" class="icon">
+                            <a href="https://github.com/benita-ekene?tab=repositories" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="https://dad-jokes-v4k4.onrender.com/jokes/api/v1/dad-joke" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
+                          
                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a> -->
@@ -260,13 +242,32 @@
                         <img src="images/netflix.webp" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Netflix clone</h3>
+                        <h3>Netflix-Clone</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://netflix4glob.netlify.app/" class="icon">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="https://github.com/benita-ekene/netflix-clone" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="https://benitaliveproject1.netlify.app/" class="icon">
+                            <!-- <a href="#" class="icon">
+                                <i class="fab fa-youtube"></i>
+                            </a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="images/dad-joke3.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Dad Jokes</h3>
+                        <div class="icons">
+                            <a href="https://dad-jokes-v4k4.onrender.com/jokes/api/v1/dad-joke" class="icon">
                                 <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="https://github.com/benita-ekene/DadJokesApi" class="icon">
+                                <i class="fab fa-github"></i>
                             </a>
                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
@@ -510,7 +511,7 @@
                     </div>
                     <div class="right-contact">
                         <form action="" class="contact-form">
-                            <div class="input-control i-c-2">
+                            <!-- <div class="input-control i-c-2">
                                 <input type="text" required placeholder="YOUR NAME">
                                 <input type="email" required placeholder="YOUR EMAIL">
                             </div>
@@ -519,7 +520,7 @@
                             </div>
                             <div class="input-control">
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
-                            </div>
+                            </div> -->
                             <div class="submit-btn">
                                 <a href="https://github.com/benita-ekene?tab=repositories" class="main-btn">
                                     <span class="btn-text">Projects</span>
