--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="btn-con">
                     <a href="https://github.com/benita-ekene?tab=repositories" class="main-btn">
                         <span class="btn-text">Projects</span>
-                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                        <!-- <span class="btn-icon"><i class="fas fa-download"></i></span> -->
                     </a>
                 </div>
             </div>
@@ -239,12 +239,12 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/netflix.webp" alt="">
+                        <img src="images/netflix2.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Netflix-Clone</h3>
                         <div class="icons">
-                            <a href="https://netflix4glob.netlify.app/" class="icon">
+                            <a href="https://bennyflix.netlify.app/" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
                             <a href="https://github.com/benita-ekene/netflix-clone" class="icon">
